syntax = "proto3";

package testing.grpc;

service TestService {
  rpc ShortBlockingHello (HelloRequest) returns (HelloReply) {}
  rpc BlockingLotsOfReplies (HelloRequest) returns (stream HelloReply) {}
  rpc ShortBlockingLotsOfReplies (HelloRequest) returns (stream HelloReply) {}
  rpc HelloError (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
